fixed some typos / rearranged some files

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-	<script type="text/javascript" src="bundle.js"></script>
 </head>
 <body>
 	<div id="container"></div>
 	<div id="modalContainer" class="modal fade"></div>
+	<script type="text/javascript" src="./js/bundle.js"></script>
 </body>
 </html>
